--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanobanana.fans",
-  "version": "0.8.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -9,46 +9,45 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-slot": "latest",
-    "@radix-ui/react-tabs": "1.1.2",
-    "@vercel/analytics": "latest",
-    "@vercel/speed-insights": "^1.2.0",
-    "autoprefixer": "^10.4.20",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
-    "date-fns": "4.1.0",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.454.0",
-    "next": "15.5.7",
-    "next-themes": "latest",
-    "react": "^19",
-    "react-dom": "^19",
-    "react-hook-form": "^7.60.0",
-    "sonner": "^1.7.4",
-    "tailwind-merge": "^2.5.5",
+    "date-fns": "^4.1.0",
+    "geist": "^1.5.1",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.1",
+    "next-themes": "^0.4.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.69.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "3.25.67"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.44.0",
-    "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.46.1",
-    "@typescript-eslint/parser": "^8.46.1",
-    "eslint": "^9.37.0",
-    "eslint-config-next": "^15.5.5",
-    "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
-    "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "@playwright/test": "^1.57.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
