--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "optimize-images": "node scripts/optimize-images.js",
+    "analyze": "ANALYZE=true next build",
+    "lighthouse": "lighthouse https://nanobanana.fans --output=html --output-path=./lighthouse-report.html",
+    "lighthouse:ci": "lhci autorun"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -32,9 +36,11 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^4.2.4",
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.1",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.3",
@@ -45,6 +51,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
+    "sharp": "^0.33.5",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
