--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint",
     "start": "next start",
     "optimize-images": "node scripts/optimize-images.js",
+    "optimize:advanced": "node scripts/optimize-images-advanced.js",
+    "optimize:thumbnails": "node scripts/optimize-thumbnails.js",
+    "optimize:128": "node scripts/optimize-thumbnails.js --size=128",
+    "optimize:256": "node scripts/optimize-thumbnails.js --size=256",
+    "optimize:512": "node scripts/optimize-thumbnails.js --size=512",
     "analyze": "ANALYZE=true next build",
     "lighthouse": "lighthouse https://nanobanana.fans --output=html --output-path=./lighthouse-report.html",
     "lighthouse:ci": "lhci autorun"
@@ -55,6 +60,19 @@
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.3%",
+      "not dead",
+      "not ie 11",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
