--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,10 @@ yarn-error.log*
 # plan and tasks
 IFLOW.md
 agents.md
-/docs
-/.claude
-/tasks
+docs/
+e2e/
+.claude/
+tasks/
 # 本地离线处理工作
 /scripts
 
